# simple-text-to-image-retrieval-system

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
apps/flask_app/: __init__.py  app.py  config.py  routes.py
apps/flask_app/static/css/: app.css
apps/flask_app/templates/: base.html  index.html  results.html
apps/gradio_app/: __init__.py  app.py
artifacts/: README.md
changes/: 0001-initial-repository-scaffold.md  README.md
config/: README.md  default.yaml
data/: README.md
docs/: architecture.md  data-pipeline.md  dataset.md  deployment.md  development.md  evaluation.md  limitations-and-future-work.md  retrieval-pipeline.md  troubleshooting.md
notebooks/: README.md
scripts/: build_embeddings.py  download_dataset.py  evaluate_retrieval.py  inspect_index.py  prepare_dataset.py  validate_repository.py
tests/: conftest.py
tests/fixtures/: README.md  evaluation_queries.csv
tests/integration/: test_flask_app.py  test_retrieval_pipeline.py
tests/unit/: test_embedding_store.py  test_preprocessing.py  test_retrieval_service.py  test_similarity.py
